--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run cli -- --generate 10 && npm run test::rest",
+    "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
+    "cli": "node ./src/service/service.js",
+    "start": "cross-env LOG_LEVEL=error npm run cli -- --server",
+    "start::debug": "cross-env LOG_LEVEL=debug npm run cli -- --server | npx pino-pretty",
     "server": "nodemon ./src/service/service.js -- --server",
     "start-front-server": "nodemon ./src/express/index.js"
   },
@@ -23,12 +26,17 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "nodemon": "2.0.2"
+    "jest": "26.0.1",
+    "nodemon": "2.0.2",
+    "pino-pretty": "4.0.0",
+    "supertest": "4.0.2"
   },
   "dependencies": {
     "chalk": "3.0.0",
+    "cross-env": "7.0.2",
     "express": "4.17.1",
     "nanoid": "3.1.3",
+    "pino": "6.3.0",
     "pug": "2.0.4"
   }
 }
