--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "supertest": "4.0.2"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
     "express": "4.17.1",
+    "mime": "2.4.6",
+    "multer": "1.4.2",
     "nanoid": "3.1.3",
     "pino": "6.3.0",
     "pug": "2.0.4"
