--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "faker": "5.1.0",
     "jest": "26.0.1",
     "nodemon": "2.0.2",
     "pino-pretty": "4.0.0",
