--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "cross-env LOG_LEVEL=error npm run cli -- --server",
     "start::debug": "cross-env LOG_LEVEL=debug npm run cli -- --server | npx pino-pretty",
     "server": "nodemon ./src/service/service.js -- --server",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start-front-server": "nodemon ./src/express/index.js",
+    "db::connect": "node -r dotenv/config ./src/service/database/connect.js"
   },
   "repository": {
     "type": "git",
@@ -36,11 +37,14 @@
     "axios": "0.19.2",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "mime": "2.4.6",
     "multer": "1.4.2",
     "nanoid": "3.1.3",
+    "pg": "8.5.1",
     "pino": "6.3.0",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.3.5"
   }
 }
